<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchActivity">

    <TextView
        android:id="@+id/tvFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCancel"
        android:layout_alignBottom="@+id/etFromDateTime"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="4dp"
        android:text="From: "
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etFromDateTime"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tvToDateTime"
        android:text="To: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginStart="0dp"
        android:layout_marginTop="98dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etToDateTime"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLocationInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvToDateTime"
        android:layout_alignTop="@+id/tvToDateTime"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="72dp"
        android:textAlignment="center"
        android:text="Search location within radius of 50km"
        android:textColor="#CB3F51B5"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvLatitude"
        android:text="Latitude: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignTop="@+id/tvLocationInstruction"
        android:layout_alignStart="@+id/tvToDateTime"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLatitude"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvLatitude"
        android:layout_alignTop="@+id/tvLatitude"
        android:layout_alignParentTop="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:text="Longitude: "
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etLongitude"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLongitude"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tvLongitude"
        android:layout_alignTop="@id/tvLongitude"
        android:layout_centerInParent="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:text="Keywords: "
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="271dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/go"
        android:layout_centerVertical="true"
        android:layout_marginStart="-183dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancel"
        android:text="Cancel"
        android:onClick="cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:onClick="go"
        android:text="Go" />

</RelativeLayout>