<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="388dp"
        android:layout_height="258dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/tvLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />


    <Button
        android:id="@+id/snap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="86dp"
        android:onClick="takePhoto"
        android:text="snap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="146dp"
        android:onClick="scrollPhotos"
        android:text="prev"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="622dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPrev"
        android:layout_marginStart="290dp"
        android:onClick="scrollPhotos"
        android:text="next"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPrev"
        app:layout_constraintTop_toBottomOf="@+id/tvTimestamp" />

    <TextView
        android:id="@+id/timestampLabel"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_alignStart="@id/tvTimestamp"
        android:layout_alignLeft="@id/tvTimestamp"
        android:layout_alignTop="@id/tvTimestamp"
        android:layout_marginStart="-94dp"
        android:layout_marginLeft="-94dp"
        android:text="TimeStamp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="254dp"
        android:layout_height="47dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="15dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="95dp"
        android:layout_height="41dp"
        android:layout_below="@id/timestampLabel"
        android:layout_alignStart="@id/tvLocation"
        android:layout_alignLeft="@id/tvLocation"
        android:layout_marginStart="-94dp"
        android:layout_marginLeft="-96dp"
        android:layout_marginBottom="-40dp"
        android:text="Location"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignBottom="@id/tvTimestamp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="-40dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/tvTimestamp" />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="225dp"
        android:ems="10"
        android:hint="@string/app_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ivGallery"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="250dp"
        android:layout_marginBottom="82dp"
        android:onClick="doSearch"
        android:text="search"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:onClick="shareImageFile"
        android:text="Share" />


</RelativeLayout>